# ns_game

./: Cargo.toml  README.MD  base_config.toml
.github/workflows/: rust.yml
src/: config.rs  lib.rs  static_def.rs  time.rs  timer.rs
src/controller/: mod.rs  proxy.rs  proxy_interface.rs
src/packers/: error.rs  mod.rs  success.rs  update.rs
src/peer/: mod.rs
src/services/: broadcast_service.rs  mod.rs  peers_service.rs  proxy_service.rs
src/services/master_service/: controller.rs  mod.rs
src/services/master_service/interface/: account.rs  mod.rs  packer.rs
