[package]
name = "ns_game"
version = "0.1.1"
edition = "2021"
authors = ["yi lu <luyikk@126.com>"]
repository = "https://github.com/luyikk/ns_game"
documentation = "https://docs.rs/ns_game"
description = "ns_game lib."
license = "MIT/Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
netxserver = { version = "1.10", features = ["dserde"] }
netxclient = { version = "1.10.5", features = ["dserde", "tcp-channel-client"] }
aqueue = "1.3"
anyhow = { version = "1", features = ["backtrace"] }
log = "0.4"
lazy_static = "1.4"
toml = "0.7"
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
chrono = "0.4"
uuid = { version = "1", features = ["serde", "v4"] }
serde_json = "1"
serde_type_name = "0.2.0"
futures = "0.3"